--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div>
     <h1>
       <center>
-   Hii ,I am Unmesh!!<br>
-     A programmer!!
+  Someday this page will be the homepage of a dynamic website
+</br>
+It's not now cuz the creator is busy in some other things right now
    </center>
   </h1>
   </div>
